Mybrand-FE~updates: the integration added in login page, signup and index

--- a/CRUD2/addBlog.html
+++ b/CRUD2/addBlog.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./Pictures/LG-1.png">
 
     <script defer src="./Card.js"></script>
+    <script defer src="./fetch.js"></script>
     <link rel="stylesheet" href="./Crud2.css">
     <link rel="stylesheet" href="./Header.css">
     <link rel="stylesheet" href="./Below.css">
@@ -14,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+
     <title>CRUD</title>
     <!-- <style>
         .cont-port-1 {
@@ -66,47 +67,7 @@
                                     d="M3 13.2373H11V3.23729H3V13.2373ZM3 21.2373H11V15.2373H3V21.2373ZM13 21.2373H21V11.2373H13V21.2373ZM13 3.23729V9.23729H21V3.23729H13Z"
                                     fill="#2F80ED" />
                             </svg><a href="../Admin-panel/Admin.html">Dashboard</a></li>
-                        <!-- <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20"
-                                fill="none">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M12.7071 1.91084C12.5196 1.75461 12.2652 1.66685 12.0001 1.66685C11.7349 1.66685 11.4806 1.75461 11.2931 1.91084L4.29308 7.74417L2.29308 9.41084C2.19757 9.48771 2.12139 9.57966 2.06898 9.68133C2.01657 9.783 1.98898 9.89235 1.98783 10.003C1.98668 10.1137 2.01198 10.2234 2.06226 10.3258C2.11254 10.4282 2.18679 10.5213 2.28069 10.5995C2.37458 10.6777 2.48623 10.7396 2.60913 10.7815C2.73202 10.8234 2.8637 10.8445 2.99648 10.8435C3.12926 10.8426 3.26048 10.8196 3.38249 10.7759C3.50449 10.7322 3.61483 10.6688 3.70708 10.5892L4.00008 10.345V15.8333C4.00008 16.4964 4.31615 17.1323 4.87876 17.6011C5.44137 18.0699 6.20443 18.3333 7.00008 18.3333H17.0001C17.7957 18.3333 18.5588 18.0699 19.1214 17.6011C19.684 17.1323 20.0001 16.4964 20.0001 15.8333V10.345L20.2931 10.5892C20.4817 10.741 20.7343 10.825 20.9965 10.8231C21.2587 10.8212 21.5095 10.7335 21.6949 10.579C21.8803 10.4245 21.9855 10.2155 21.9878 9.997C21.99 9.77851 21.8892 9.568 21.7071 9.41084L12.7071 1.91084Z"
-                                    fill="#8E8E93" />
-                            </svg><a href="#">Home</a></li>
-                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
-                                fill="none">
-                                <path
-                                    d="M19 3.18645H14.82C14.4 2.02645 13.3 1.18645 12 1.18645C10.7 1.18645 9.6 2.02645 9.18 3.18645H5C3.9 3.18645 3 4.08645 3 5.18645V19.1864C3 20.2864 3.9 21.1864 5 21.1864H19C20.1 21.1864 21 20.2864 21 19.1864V5.18645C21 4.08645 20.1 3.18645 19 3.18645ZM12 3.18645C12.55 3.18645 13 3.63645 13 4.18645C13 4.73645 12.55 5.18645 12 5.18645C11.45 5.18645 11 4.73645 11 4.18645C11 3.63645 11.45 3.18645 12 3.18645ZM14 17.1864H7V15.1864H14V17.1864ZM17 13.1864H7V11.1864H17V13.1864ZM17 9.18645H7V7.18645H17V9.18645Z"
-                                    fill="#8E8E93" />
-                            </svg><a href="#">About</a></li>
-                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewBox="0 0 24 29"
-                                fill="none">
-                                <g clip-path="url(#clip0_61_947)">
-                                    <path
-                                        d="M3.646 33.3375C6.98558 41.8708 15.2877 47.9167 25.0002 47.9167C37.6564 47.9167 47.9168 37.6562 47.9168 25M46.3543 16.6625C43.0189 8.12708 34.7147 2.08333 25.0002 2.08333C12.3439 2.08333 2.0835 12.3437 2.0835 25M18.7502 33.3333H2.0835V50M47.9168 0V16.6667H31.2502"
-                                        stroke="#8E8E93" stroke-width="4.16667" />
-                                    <path
-                                        d="M5.58291 1.41602V1.42168C4.41104 1.60293 3.3751 3.23418 3.3751 5.31855C3.3751 6.47402 3.70791 7.49356 4.19541 8.20156L4.67354 8.89258L3.9376 9.05684C3.29541 9.2041 2.82197 9.61758 2.42822 10.2746C2.02979 10.926 1.72979 11.8322 1.51885 12.8687C1.13447 14.7719 1.05479 17.0998 1.04541 19.1275H3.10791L3.66572 28.0994H8.17979L8.67197 19.1275H10.636C10.636 17.0771 10.622 14.7209 10.2704 12.8008C10.0829 11.7529 9.79228 10.8523 9.39385 10.201C8.99072 9.55527 8.49385 9.1418 7.77666 9.01152L7.02666 8.86992L7.5001 8.15625C7.96885 7.44824 8.28291 6.4457 8.28291 5.31855C8.28291 3.09824 7.12041 1.42168 5.82666 1.42168C5.69072 1.42168 5.60635 1.41602 5.58291 1.41602ZM20.6251 1.86914C19.8188 1.86914 19.172 2.64908 19.172 3.625C19.172 4.60092 19.8188 5.38086 20.6251 5.38086C21.4314 5.38086 22.0782 4.60092 22.0782 3.625C22.0782 2.64908 21.4314 1.86914 20.6251 1.86914ZM14.5782 3.11523V5.83398H9.7501V6.85352H14.5782V15.8027H12.0001V16.8223H14.5782V23.0527H9.7501V24.0723H14.5782V25.8848H18.3657C18.3423 25.7205 18.3282 25.5506 18.3282 25.375C18.3282 25.1994 18.3423 25.0295 18.3657 24.8652H15.422V16.8223H18.3657C18.3423 16.658 18.3282 16.4881 18.3282 16.3125C18.3282 16.1369 18.3423 15.967 18.3657 15.8027H15.422V4.13477H18.3657C18.3423 3.96937 18.3282 3.79889 18.3282 3.625C18.3282 3.45111 18.3423 3.28062 18.3657 3.11523H14.5782ZM20.6251 14.5566C19.8188 14.5566 19.172 15.3383 19.172 16.3125C19.172 17.2867 19.8188 18.0684 20.6251 18.0684C21.4314 18.0684 22.0782 17.2867 22.0782 16.3125C22.0782 15.3383 21.4314 14.5566 20.6251 14.5566ZM20.6251 23.6191C19.8188 23.6191 19.172 24.4008 19.172 25.375C19.172 26.3492 19.8188 27.1309 20.6251 27.1309C21.4314 27.1309 22.0782 26.3492 22.0782 25.375C22.0782 24.4008 21.4314 23.6191 20.6251 23.6191Z"
-                                        fill="#545454" />
-                                </g>
-                                <defs>
-                                    <clipPath id="clip0_61_947">
-                                        <rect width="24" height="29" fill="white" />
-                                    </clipPath>
-                                </defs>
-                            </svg><a href="#">Skills</a></li>
-                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none">
-                                <g clip-path="url(#clip0_61_973)">
-                                    <path
-                                        d="M1.75 16.002C3.353 20.098 7.338 23 12 23C18.075 23 23 18.075 23 12M22.25 7.998C20.649 3.901 16.663 1 12 1C5.925 1 1 5.925 1 12M9 16H1V24M23 0V8H15"
-                                        stroke="#8E8E93" stroke-width="2" />
-                                </g>
-                                <defs>
-                                    <clipPath id="clip0_61_973">
-                                        <rect width="24" height="24" fill="white" />
-                                    </clipPath>
-                                </defs>
-                            </svg><a href="#">Updates</a></li> -->
+
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 fill="none">
                                 <path
@@ -157,54 +118,7 @@
 
                 </div>
 
-                <div class="content_1" id="all">
-                    <!-- <div class="cont-port-1" id="single">
-                        <img src="./Pictures/image_processing20200616-29208-1lm1ktf.jpg" alt="cont-1"
-                            class="cont-pic-1">
-                        <p class="cont-p-1">UI-UX DESIGN</p>
-                        <h1 class="cont-title-1">Personal Portfolio</h1>
-                        <p class="cont-desc-1">This is the project I worked on, I used (React js, on Frontend) and the
-                            backend I used the Node js and about the database I used the MongoDB.</p>
-                            <div id="only-btn">
-                                <button class="cont-btn-1"><i class="fa-solid fa-pen"></i></button>
-                                <button class="cont-btn-2"><i class="fa-solid fa-trash-can"></i></button>
-                            </div>
-                    </div> -->
-
-
-                    <!-- <div class="content-1">
-                        <div class="cont-port-1">
-                            <img src="./Pictures/image_processing20200616-29208-1lm1ktf.jpg" alt="cont-1"
-                                class="cont-pic-1">
-                            <p class="cont-p-1">UI-UX DESIGN</p>
-                            <h1 class="cont-title-1">Personal Portfolio</h1>
-                            <p class="cont-desc-1">This is the project I worked on, I used (React js, on Frontend) and
-                                the
-                                backend I used the Node js and about the database I used the MongoDB.</p>
-                                <div id="only-btn">
-                                    <button class="cont-btn-1"><i class="fa-solid fa-pen"></i></button>
-                                    <button class="cont-btn-2"><i class="fa-solid fa-trash-can"></i></button>
-                                </div>
-                        </div>
-                    </div>
-
-                    <div class="content-1">
-                        <div class="cont-port-1">
-                            <img src="./Pictures/image_processing20200616-29208-1lm1ktf.jpg" alt="cont-1"
-                                class="cont-pic-1">
-                            <p class="cont-p-1">UI-UX DESIGN</p>
-                            <h1 class="cont-title-1">Personal Portfolio</h1>
-                            <p class="cont-desc-1">This is the project I worked on, I used (React js, on Frontend) and
-                                the
-                                backend I used the Node js and about the database I used the MongoDB.</p>
-                            <div id="only-btn">
-                                <button class="cont-btn-1"><i class="fa-solid fa-pen"></i></button>
-                                <button class="cont-btn-2"><i class="fa-solid fa-trash-can"></i></button>
-                            </div>
-                        </div>
-                    </div> -->
-
-                </div>
+                <div class="content_1" id="Blogs"></div>
             </div>
         </div>
     </div>
