--- a/LogIn/Login.html
+++ b/LogIn/Login.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script defer src="./Log.js"></script>
+    <script defer src="./Login.js"></script>
+
+
+
     <title>Login | Page</title>
 </head>
 
@@ -23,7 +26,7 @@
                 <h1>Login</h1>
             </div>
             <!-- <div class="form-1"> -->
-            <form  id="form" onsubmit="return validateInputs()" action="../Admin-panel/Admin.html">
+            <form id="form" onsubmit="return validateInputs()" action="../Admin-panel/Admin.html">
                 <div class="one">
                     <label for="" id="name-2">Email*</label>
                     <input type="text" name="nom" id="name_1">
@@ -45,7 +48,16 @@
             <!-- </div> -->
             <span><a href="../SignUp/Signup.html" id="create-1">Create account</a></span>
         </div>
+
+        <!-- Toastify -->
+        <link rel="stylesheet" href="https://unpkg.com/toastify-js/src/toastify.css">
+        <script src="https://unpkg.com/toastify-js"></script>
+        <!-- Toastify -->
+
     </div>
+
+
+
 </body>
 
 </html>
