MyBrand-FE-BE: different updated pages

--- a/Admin-panel/Admin.html
+++ b/Admin-panel/Admin.html
@@ -224,10 +224,10 @@
                         </div>
                     </div>
                     <div class="left-side">
-                        <div class="comment">
-                            <h1 class="com-1">Recent Messages</h1>
+                        <div id="comment">
+                            <h1 class="com-1">Recent Queries</h1>
 
-                            <div class="com-2">
+                            <!-- <div class="com-2">
                                 <img src="./Pictures/Avatar Image-1.png" alt="img-1" class="av-1" width="50"
                                     height="50">
                                 <span class="text-1">
@@ -293,13 +293,15 @@
                                         <a href="#" id="anc-1">Reply</a> . 23h
                                     </span>
                                 </span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script defer src="./fetch.js"></script>
 </body>
 
 </html>
