--- a/CRUD/dashboard.html
+++ b/CRUD/dashboard.html
@@ -205,12 +205,13 @@
                 })
             </script>
 
-
-
-
         </div>
     </div>
     </div>
+            <!-- Toastify -->
+            <link rel="stylesheet" href="https://unpkg.com/toastify-js/src/toastify.css">
+            <script src="https://unpkg.com/toastify-js"></script>
+            <!-- Toastify -->
 </body>
 
 </html>
