--- a/CRUD2/addBlog.html
+++ b/CRUD2/addBlog.html
@@ -118,7 +118,7 @@
 
                 </div>
 
-                <div class="content_1" id="Blogs"></div>
+                <div class="cont-card" id="Blogs"></div>
             </div>
         </div>
     </div>
