--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <button class="btn-2">Say Hello</button>
                 <span class="boxes-3">
                     <span class="back-1">
-                        <span class="sub-1">-1 Y.</span>
+                        <span class="sub-1">5+ Y.</span>
                         <span class="sub-2">Experience</span>
                     </span>
 
@@ -396,7 +396,7 @@
         </div>
 
         <div class="box-6">
-            <!-- <div class="cont-box6"> -->
+            <div class="cont-box6">
                 <div class="box6-top">
                     <h1 class="box6-title">Blogs</h1>
                     <p class="box6-p">"Welcome to my tech corner! Dive into insightful articles on software
@@ -405,11 +405,11 @@
                         Let's explore the fascinating world of coding together!"</p>
                     </div>
 
-                  
-            <!-- </div> -->
+                    <div id="Blogs"></div>
+            </div>
         </div>
 
-                <div class="boxOver" id="Blogs"></div>
+                
 
         <div class="box-7">
             <span class="box7-what">
