MyBrand-FE-BE: All integration added

--- a/Admin-panel/Admin.html
+++ b/Admin-panel/Admin.html
@@ -86,7 +86,7 @@
         </div>
 
         <div>
-            <h3>Welcome, <span id="user-name">user-name</span>!</h3>
+            <!-- <h3>Welcome, <span id="user-name">user-name</span>!</h3> -->
         </div>
 
         <div class="over-box">
@@ -172,7 +172,7 @@
                             <h1 id="text-1"> Stats</h1>
                             <!-- start legend-->
                             <div id="over-hard">
-                                <div id="over-simple">
+                                <div id="overSimple">
                                     <div class="simple-1">
                                         <h1 id="text-2">Blogs</h1>
                                         <p id="text-p">350,897 <i class="fa-solid fa-blog"></i></p>
@@ -182,11 +182,8 @@
                                         <p id="text-o">350,897 <i class="fa-solid fa-clipboard-question"></i></p>
                                     </div>
                                 </div>
-                                <div id="over-simple">
-                                    <div class="simple-3">
-                                        <h1 id="text-2">Likes</h1>
-                                        <p id="text-p">350,897 <i class="fa-solid fa-thumbs-up"></i></i></p>
-                                    </div>
+                                <div id="overSimple">
+                                    <div id="simple3"></div>
                                     <div class="simple-4">
                                         <h1 id="text-2">Comments</h1>
                                         <p id="text-u">350,897 <i class="fa-solid fa-comments"></i></i></p>
