--- a/CRUD2/addBlog.html
+++ b/CRUD2/addBlog.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./Pictures/LG-1.png">
 
     <script defer src="./Card.js"></script>
-    <script defer src="./fetch.js"></script>
+
     <link rel="stylesheet" href="./Crud2.css">
     <link rel="stylesheet" href="./Header.css">
     <link rel="stylesheet" href="./Below.css">
@@ -118,10 +118,15 @@
 
                 </div>
 
-                <div class="cont-card" id="Blogs"></div>
+                <div id="Blogs"></div>
             </div>
         </div>
     </div>
+    <!-- Toastify -->
+    <link rel="stylesheet" href="https://unpkg.com/toastify-js/src/toastify.css">
+    <script src="https://unpkg.com/toastify-js"></script>
+    <!-- Toastify -->
+    <script defer src="./fetch.js"></script>
 </body>
 
 </html>
