--- a/CRUD/dashboard.html
+++ b/CRUD/dashboard.html
@@ -11,19 +11,9 @@
     <link rel="stylesheet" href="./Admin.css">
     <link rel="stylesheet" href="./Form.css">
     <script defer src="./Crud3.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Admin-panel</title>
 
-    <style>
-        .card {
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-    </style>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 
 <body>
@@ -168,46 +158,55 @@
                 <form method="post" id="form">
                     <div class="one">
                         <label for="" id="headOne">Title</label>
-                        <input type="text" name="title" placeholder="enter your title" class="form-control"
-                            id="myTitle">
+                        <input type="text" name="title" placeholder="enter your title" id="form-control"
+                            id="title">
                         <div class="error" id="oneError"></div>
                     </div>
                     <div class="one">
                         <label for="" id="headOne">Insert Photo</label>
-                        <input type="file" accept="image/*" id="photo">
+                        <input type="file" accept="image/*" id="image">
+
                         <div class="error"></div>
                     </div>
 
                     <div class="form-group">
                         <div class="one">
                             <label for="" id="headOne">Description</label>
-                            <textarea class="form-control" id="summernote" name="description"></textarea>
+                            <div id="editor"></div>
                             <div class="error" id="oneError"></div>
                         </div>
                     </div>
                     <div id="mybtn">
-                        <button type="submit" id="quickSub" onclick= validateInputs()>submit</button>
+                        <button type="submit" id="quickSub" onclick= "validateInputs(); updateBlog();">submit</button>
                         <button type="submit" id="quickSub" onclick="del()">Clear</button>
                     </div>
                 </form>
 
                 <!-- <div id="cardContainer"></div> -->
             </div>
-            <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-            <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-
-            <script>
-                $('#summernote').summernote({
-                    placeholder: 'Description',
-                    height: 300,
-                    width: 400,
-
-                })
-            </script>
 
         </div>
     </div>
     </div>
+
+
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+  <script>
+    let quill = new Quill('#editor', {
+      theme: 'snow',
+      modules: {
+        toolbar: [
+          [{ 'header': [1, 2, false] }],
+          ['bold', 'italic', 'underline'],
+          [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+          [{ 'align': [] }],
+          ['link', 'image'],
+          ['clean']
+        ]
+      }
+    });
+  </script>
+
             <!-- Toastify -->
             <link rel="stylesheet" href="https://unpkg.com/toastify-js/src/toastify.css">
             <script src="https://unpkg.com/toastify-js"></script>
