--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="./mybrand.js"></script>
-    <script defer src="./Brand.js"></script>
+
+    <!-- <script defer src="./Brand.js"></script> -->
     <title>My brand</title>
 </head>
 
@@ -561,15 +561,15 @@
                     <form action="" id="form">
                         <div class="one">
                             <label for="" id="name-1">Name*</label>
-                            <input type="text" name="name" id="inputOne">
+                            <input type="text" name="name" id="username">
                             <div class="error"></div>
                         </div>
                         <div class="one">
                             <label for="" class="lab-1">Email*</label>
-                            <input type="text" name="name" id="in_2">
+                            <input type="text" name="name" id="email">
                             <div class="error"></div>
                         </div>
-                        <div class="one">
+                        <!-- <div class="one">
                             <label for="" class="lab-1">Location</label>
                             <input type="text" name="name" id="in_3">
                             <div class="error"></div>
@@ -578,13 +578,13 @@
                             <label for="" class="lab-1">Subject*</label>
                             <input type="text" name="name" id="in_4">
                             <div class="error"></div>
-                        </div>
+                        </div> -->
                         <div class="one">
                             <label for="" class="lab-1">Message*</label>
-                            <input type="text" name="name" id="in_5">
+                            <input type="text" name="name" id="message">
                             <div class="error"></div>
                         </div>
-                        <button class="last-btn" type="submit" onclick=validateInputs()>Submit 
+                        <button class="last-btn" type="submit" onclick="validateInputs()">Submit 
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                 viewBox="0 0 24 24" fill="none">
                                 <path
@@ -615,7 +615,11 @@
             <a href="#home-1"><i class="fa-regular fa-circle-up"></i></a>
         </div>
     </div>
-
+    <!-- Toastify -->
+    <link rel="stylesheet" href="https://unpkg.com/toastify-js/src/toastify.css">
+    <script src="https://unpkg.com/toastify-js"></script>
+    <!-- Toastify -->
+    <script src="./mybrand.js"></script>
 </body>
 
 </html>
