--- a/LogIn/Login.html
+++ b/LogIn/Login.html
@@ -26,7 +26,8 @@
                 <h1>Login</h1>
             </div>
             <!-- <div class="form-1"> -->
-            <form id="form" onsubmit="return validateInputs()" action="../Admin-panel/Admin.html">
+            <form  id="form" onsubmit="return validateInputs()" action="../Adminpanel/Admin.html">
+
                 <div class="one">
                     <label for="" id="name-2">Email*</label>
                     <input type="text" name="nom" id="name_1">
