--- a/CRUD2/addBlog.html
+++ b/CRUD2/addBlog.html
@@ -66,7 +66,7 @@
                                 <path
                                     d="M3 13.2373H11V3.23729H3V13.2373ZM3 21.2373H11V15.2373H3V21.2373ZM13 21.2373H21V11.2373H13V21.2373ZM13 3.23729V9.23729H21V3.23729H13Z"
                                     fill="#2F80ED" />
-                            </svg><a href="../Adminpanel/Admin.html">Dashboard</a></li>
+                            </svg><a href="../Admin-panel/Admin.html">Dashboard</a></li>
                         <!-- <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20"
                                 fill="none">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
