--- a/CRUD/dashboard.html
+++ b/CRUD/dashboard.html
@@ -10,10 +10,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./Admin.css">
     <link rel="stylesheet" href="./Form.css">
-    <script defer src="./Crud3.js"></script>
+    
     <title>Admin-panel</title>
 
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <!-- <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -158,8 +158,7 @@
                 <form method="post" id="form">
                     <div class="one">
                         <label for="" id="headOne">Title</label>
-                        <input type="text" name="title" placeholder="enter your title" id="form-control"
-                            id="title">
+                        <input type="text" name="title" placeholder="enter your title" id="title">
                         <div class="error" id="oneError"></div>
                     </div>
                     <div class="one">
@@ -177,8 +176,8 @@
                         </div>
                     </div>
                     <div id="mybtn">
-                        <button type="submit" id="quickSub" onclick= "validateInputs(); updateBlog();">submit</button>
-                        <button type="submit" id="quickSub" onclick="del()">Clear</button>
+                        <button type="submit" id="quickSub" "onclick= validateInputs(); updateBlog();">submit</button>
+                        <!-- <button type="reset" id="quickSub" >Clear</button> -->
                     </div>
                 </form>
 
@@ -190,27 +189,38 @@
     </div>
 
 
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-  <script>
-    let quill = new Quill('#editor', {
-      theme: 'snow',
-      modules: {
-        toolbar: [
-          [{ 'header': [1, 2, false] }],
-          ['bold', 'italic', 'underline'],
-          [{ 'list': 'ordered' }, { 'list': 'bullet' }],
-          [{ 'align': [] }],
-          ['link', 'image'],
-          ['clean']
-        ]
-      }
-    });
-  </script>
+    <!-- <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script> -->
+    
+    <!-- <script>
+        let quill = new Quill('#editor', {
+            theme: 'snow',
+            modules: {
+                toolbar: [
+                    [{ 'header': [1, 2, false] }],
+                    ['bold', 'italic', 'underline'],
+                    [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+                    [{ 'align': [] }],
+                    ['link', 'image'],
+                    ['clean']
+                ]
+            }
+        });
+    </script> -->
 
-            <!-- Toastify -->
-            <link rel="stylesheet" href="https://unpkg.com/toastify-js/src/toastify.css">
-            <script src="https://unpkg.com/toastify-js"></script>
-            <!-- Toastify -->
+    <script src="https://cdn.jsdelivr.net/npm/quill@2.0.0-rc.2/dist/quill.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/quill@2.0.0-rc.2/dist/quill.snow.css" rel="stylesheet">
+
+    <script>
+        const quill = new Quill('#editor', {
+          theme: 'snow'
+        });
+      </script>
+
+    <!-- Toastify -->
+    <link rel="stylesheet" href="https://unpkg.com/toastify-js/src/toastify.css">
+    <script src="https://unpkg.com/toastify-js"></script>
+    <!-- Toastify -->
+    <script src="./Crud3.js"></script>
 </body>
 
 </html>
