MyBrand-FE-BE~Updates: Protection added in whole pages of dashboard and logout functionality added, likes all operation are working, Queries Created, Some Statistics added

--- a/CRUD/dashboard.html
+++ b/CRUD/dashboard.html
@@ -130,7 +130,7 @@
                             </svg><a href="#">Settings</a></li>
                     </ul>
                 </nav>
-                <button id="log-1">Logout <svg xmlns="http://www.w3.org/2000/svg" width="22" height="26"
+                <button id="log-1" onclick="logoutUser()">Logout <svg xmlns="http://www.w3.org/2000/svg" width="22" height="26"
                         viewBox="0 0 22 26" fill="none">
                         <g clip-path="url(#clip0_29_469)">
                             <path
