--- a/Single-Blog/Blog.html
+++ b/Single-Blog/Blog.html
@@ -34,11 +34,7 @@
             <i class="fa-solid fa-bars"></i>
         </div>
     </div>
-    <div class="container">
-
-
-
-    </div>
+    <div class="container"></div>
     <div id="comment">
         <h1 class="com-1">Recent Comments</h1>
     </div></br></br>
