--- a/Queries/querie.html
+++ b/Queries/querie.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./Admin.css">
+    <link rel="stylesheet" href="./quries.css">
 
     <title>Admin-panel</title>
 </head>
@@ -98,7 +98,7 @@
                                 <path
                                     d="M3 13.2373H11V3.23729H3V13.2373ZM3 21.2373H11V15.2373H3V21.2373ZM13 21.2373H21V11.2373H13V21.2373ZM13 3.23729V9.23729H21V3.23729H13Z"
                                     fill="#2F80ED" />
-                            </svg><a href="#">Dashboard</a></li>
+                            </svg><a href="../Admin-panel/Admin.html">Dashboard</a></li>
 
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 fill="none">
@@ -112,7 +112,7 @@
                                     d="M4.80001 7.25001H0.936007C0.492007 7.25001 0.0480075 7.71401 0.108008 8.46801L1.98001 22.9535C1.98001 22.9535 4.20001 12.2815 4.63201 9.71501C4.76401 8.94651 5.36401 8.70001 5.80801 8.70001H12C12 8.70001 11.16 5.68401 11.076 5.35051C10.932 4.71251 10.668 4.35001 10.14 4.35001H6.16801C5.73601 4.35001 5.32801 4.68351 5.20801 5.27801C5.10001 5.85801 4.80001 7.25001 4.80001 7.25001ZM10.656 7.25001H5.85601C5.85601 7.25001 6.36001 5.80001 6.90001 5.80001H9.45601C10.032 5.80001 10.656 7.25001 10.656 7.25001ZM3.20401 23.5625C2.83201 24.244 2.29201 24.65 1.69201 24.65H20.568C21.216 24.65 21.672 24.2005 21.804 23.4465C22.332 20.271 23.82 11.2085 23.82 11.2085C23.904 10.4835 23.46 10.15 23.076 10.15H19.2V8.01851C19.2 7.78651 18.888 7.25001 18.408 7.25001H13.896C13.272 7.25001 12.852 8.09101 12.852 8.09101L12 10.15H6.70801C6.32401 10.15 5.95201 10.4255 5.88001 10.875C5.88001 10.875 3.97201 20.59 3.81601 21.5035C3.73201 22.04 3.55201 22.939 3.20401 23.5625ZM18.456 10.15H13.2C13.2 10.15 13.896 8.70001 14.556 8.70001H17.304C18.156 8.70001 18.456 10.15 18.456 10.15Z"
                                     fill="#8E8E93" />
                             </svg><a href="../CRUD2/addBlog.html">Portfolio</a></li>
-                        <li><i class="fa-solid fa-clipboard-question" id="queries-icon"></i><a href="../Queries/querie.html">Queries</a></li>
+                        <li><i class="fa-solid fa-clipboard-question" id="queries-icon"></i><a href="#">Queries</a></li>
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewBox="0 0 24 29"
                                 fill="none">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -127,93 +127,22 @@
                             </svg><a href="#">Settings</a></li>
                     </ul>
                 </nav>
-                <button id="log-1" onclick="logoutUser()">Logout <svg xmlns="http://www.w3.org/2000/svg" width="22" height="26"
-                        viewBox="0 0 22 26" fill="none">
-                        <g clip-path="url(#clip0_29_469)">
-                            <path
-                                d="M11.2973 0.366333C14.6788 0.366333 17.8099 2.10387 19.8861 5.02965C19.9453 5.11259 19.9894 5.20846 20.0159 5.31156C20.0424 5.41466 20.0508 5.52289 20.0404 5.6298C20.0301 5.73671 20.0013 5.84012 19.9558 5.93388C19.9102 6.02764 19.8489 6.10982 19.7754 6.17555C19.6257 6.31144 19.4362 6.37444 19.2471 6.35119C19.058 6.32794 18.8842 6.22026 18.7625 6.051C17.8546 4.77709 16.714 3.75251 15.4228 3.05119C14.1317 2.34987 12.7222 1.98931 11.2962 1.99551C6.01155 1.99551 1.72682 6.84316 1.72682 12.8218C1.72682 18.8004 6.01155 23.6481 11.2962 23.6481C12.7428 23.6545 14.1721 23.2835 15.478 22.5627C16.7839 21.8418 17.933 20.7897 18.8399 19.4842C18.9596 19.3132 19.132 19.2029 19.3207 19.1766C19.5093 19.1503 19.6994 19.2102 19.8506 19.3435C19.9248 19.4081 19.987 19.4893 20.0335 19.5823C20.08 19.6753 20.11 19.7782 20.1215 19.8848C20.133 19.9915 20.1259 20.0997 20.1007 20.2032C20.0754 20.3066 20.0324 20.4031 19.9743 20.4869C17.9013 23.4886 14.7283 25.2772 11.2973 25.2772C5.21481 25.2772 0.287109 19.7009 0.287109 12.8218C0.287109 5.94264 5.21589 0.366333 11.2973 0.366333ZM18.6711 9.28443L21.5806 12.6561C21.8624 12.9812 21.8677 13.5031 21.5935 13.822L18.7507 17.1139C18.6158 17.2668 18.434 17.3514 18.2453 17.3491C18.0565 17.3468 17.8763 17.2577 17.7443 17.1015C17.6773 17.0258 17.6238 16.9355 17.5869 16.8359C17.5501 16.7363 17.5305 16.6292 17.5294 16.5208C17.5283 16.4124 17.5457 16.3048 17.5805 16.2042C17.6154 16.1035 17.667 16.0119 17.7325 15.9344L19.3958 14.0075H8.31035C8.21688 14.0089 8.12409 13.9888 8.0373 13.9486C7.95051 13.9084 7.8714 13.8487 7.80451 13.7731C7.73761 13.6975 7.68423 13.6073 7.64742 13.5077C7.61061 13.4082 7.59108 13.3012 7.58996 13.193C7.58996 12.7421 7.91253 12.3771 8.31035 12.3771H19.3517L17.6765 10.4366C17.5415 10.2838 17.4645 10.0751 17.4622 9.85648C17.46 9.63786 17.5329 9.42716 17.6647 9.27073C17.7998 9.11798 17.9816 9.03361 18.1704 9.03618C18.3591 9.03875 18.5392 9.12805 18.6711 9.28443Z"
-                                fill="#FF0000" />
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_29_469">
-                                <rect width="21.5043" height="24.9109" fill="white"
-                                    transform="translate(0.287109 0.366333)" />
-                            </clipPath>
-                        </defs>
-                    </svg></button>
+                <button id="log-1" onclick="logoutUser()">Logout <i class="fa-solid fa-right-from-bracket" id="out-1"></i></button>
             </div>
 
             <div class="box-3">
                 <div class="bar-1">
                     <nav class="third-nav">
                         <ul>
-                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
-                                    fill="none">
-                                    <path
-                                        d="M3 13.2373H11V3.23729H3V13.2373ZM3 21.2373H11V15.2373H3V21.2373ZM13 21.2373H21V11.2373H13V21.2373ZM13 3.23729V9.23729H21V3.23729H13Z"
-                                        fill="#2F80ED" />
-                                </svg><a href="#" id="li-1">Dashboard</a></li>
+                            <li><i class="fa-solid fa-clipboard-question" id="queries-icon"></i><a href="#" id="li-1">Queries</a></li>
                         </ul>
                     </nav>
-                    <div class="num-1">
-                        <div id="demo"></div>
+                    <div id="num-1">
+                        
                     </div>
                 </div>
-
+                
                 <div class="over-bar">
-                    <div class="sec-over">
-                        <div class="bar-2">
-                            <h1 id="text-1"> Stats</h1>
-                            <!-- start legend-->
-                            <div id="over-hard">
-                                <div id="overSimple">
-                                    <div id="simple-1">
-                                        <!-- <h1 id="text-2">Blogs</h1>
-                                        <p id="text-p">350,897 <i class="fa-solid fa-blog"></i></p> -->
-                                    </div>
-                                    <div id="simple2">
-                                        <!-- <h1 id="text-2">Queries</h1>
-                                        <p id="text-o">350,897 <i class="fa-solid fa-clipboard-question"></i></p> -->
-                                    </div>
-                                </div>
-                                <div id="overSimple">
-                                    <div id="simple3"></div>
-                                    <div id="simple4">
-                                        <h1 id="text-2">Comments</h1>
-                                        <p id="text-u">350,897 <i class="fa-solid fa-comments"></i></i></p>
-                                    </div>
-                                </div>
-
-
-                            </div>
-                            <!-- end legend -->
-                        </div>
-
-                        <div class="bar-2">
-                            <h1 id="text-1"> Visitors</h1>
-                            <!-- start bar chart -->
-                            <div class="piechart-1">
-                                <span class="name"></span>
-                            </div>
-
-                            <!-- start legend-->
-                            <div class="legend">
-                                <span class="legend-item-one-one">
-                                    <small>Commenters</small>
-                                </span>
-                                <!-- <span class="legend-item-two">
-                                <small>CSS</small>
-                            </span>
-                            <span class="legend-item-three">
-                                <small>HTML</small>
-                            </span> -->
-                                <span class="legend-item-five">
-                                    <small>Viewers</small>
-                                </span>
-                            </div>
-                            <!-- end -->
-                        </div>
-                    </div>
                     <div class="left-side">
                         <div id="comment">
                             <h1 class="com-1">Recent Queries</h1>
