--- a/CRUD/dashboard.html
+++ b/CRUD/dashboard.html
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div id="mybtn">
-                        <button type="submit" id="quickSub" "onclick= validateInputs(); updateBlog();">submit</button>
+                        <button type="submit" id="quickSub" onclick= "validateInputs(); updateBlog();">submit</button>
                         <!-- <button type="reset" id="quickSub" >Clear</button> -->
                     </div>
                 </form>
