MyBrand-FE-BE~updates: Integration added

--- a/CRUD/dashboard.html
+++ b/CRUD/dashboard.html
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div id="mybtn">
-                        <button type="submit" id="quickSub" onclick= "validateInputs(); updateBlog();">submit</button>
+                        <button type="submit" id="quickSub" onclick="validateInputs(); updateBlog();">submit</button>
                         <!-- <button type="reset" id="quickSub" >Clear</button> -->
                     </div>
                 </form>
@@ -221,6 +221,7 @@
     <script src="https://unpkg.com/toastify-js"></script>
     <!-- Toastify -->
     <script src="./Crud3.js"></script>
+    <script defer src="./fetchPost.js"></script>
 </body>
 
 </html>
