MyBrand-FE-BE~updates: Integration added

--- a/Single-Blog/Blog.html
+++ b/Single-Blog/Blog.html
@@ -34,10 +34,17 @@
             <i class="fa-solid fa-bars"></i>
         </div>
     </div>
-    <div class="container"></div>
+    <div class="container"></div></br></br>
+    <div class="com-1">
+        <h1 class="com-1">Recent Comments</h1> 
+    </div></br></br></br></br>
+    <div id="over-com">
     <div id="comment">
-        <h1 class="com-1">Recent Comments</h1>
-    </div></br></br>
+        
+    </div>
+</div>
+
+</br></br>
 
     <div class="last-form-box9" id="can-1">
         <div class="inside-1">
