MyBrand-FE-BE~updates: Single blog content design changed

--- a/index.html
+++ b/index.html
@@ -404,8 +404,13 @@
                         , where I share practical tips, coding challenges, and the latest trends.<br>
                         Let's explore the fascinating world of coding together!"</p>
                     </div>
-
-                    <div id="Blogs"></div>
+                    <!-- <div class="loader-wrapper">
+                        <div class="loader"></div>
+                      </div> -->
+                      
+                    <div id="Blogs" class="content">
+                        <!-- <div class="loader"></div>   -->
+                    </div>
             </div>
         </div>
 
